--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', 'Roboto', sans-serif;
 }
 
 /* Navbar */
 header {
   background-color: #636c79;
+  height: 90vh;
 }
 
 .logo {
@@ -21,7 +19,7 @@ header {
 }
 
 header nav {
-  padding: 15px 60px;
+  padding: 20px 60px;
 }
 
 header nav,
@@ -38,7 +36,7 @@ header nav,
 
 .lists .list-item {
   list-style-type: none;
-  padding: 10px 20px;
+  margin: 10px 20px;
   color: #fff;
   cursor: pointer;
 }
@@ -49,6 +47,68 @@ nav .btn {
   padding: 10px 40px;
   margin-left: 80px;
   cursor: pointer;
-  border: 1px solid #7d8188;
+  border: 2px solid #7d8188;
   border-radius: 2px;
+}
+
+/* Header main */
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.container .image {
+  margin-top: 40px;
+}
+
+.container .heading h1 {
+  color: #fff;
+  font-size: 60px;
+}
+
+.container .heading p {
+  color: #c3c5c7;
+  font-weight: 400;
+  line-height: 1.6;
+  padding: 25px 0;
+}
+
+.container form {
+  display: flex;
+  position: relative;
+}
+
+.container form input {
+  width: 100%;
+  border: 0;
+  outline: 0;
+  font-size: medium;
+  margin: 12px 0;
+  padding: 20px 30px;
+  padding-left: 40px;
+}
+
+.container form input::placeholder {
+  color: #c3c5c7;
+  font-family: 'Roboto';
+}
+
+.container form button {
+  border: none;
+  background-color: #8bb7a2;
+  color: #ffffff;
+  font-weight: 600;
+  font-family: 'Raleway';
+  padding: 15px 50px;
+  cursor: pointer;
+  position: absolute;
+  top: 19px;
+  right: 8px;
+}
+
+.container form i {
+  position: absolute;
+  top: 33px;
+  left: 15px;
 }
