--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600;700&family=Roboto:wght@100;400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600;700&family=Roboto:wght@100;300;400;900&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Raleway', 'Roboto', sans-serif;
+}
+
+body {
+  background-color: #fbfbfb;
 }
 
 /* Navbar */
@@ -14,7 +18,7 @@ header {
 }
 
 .logo {
-  width: 90px;
+  width: 120px;
   cursor: pointer;
 }
 
@@ -111,4 +115,82 @@ nav .btn {
   position: absolute;
   top: 33px;
   left: 15px;
+}
+
+/* Sections */
+.section-1 {
+  margin: 100px 30px;
+}
+
+.section-1 > h1 {
+  text-align: center;
+  font-size: 45px;
+  margin-bottom: 60px;
+}
+
+.section-1 .rates {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.section-1 .rates .rate {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 15px;
+}
+
+.section-1 .rates .rate > h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+}
+
+.section-1 .image-2 img {
+  width: 90%;
+  display: block;
+  margin: 50px auto;
+}
+
+.section-2 {
+  margin: 120px 0;
+}
+
+.section-2 > h1 {
+  text-align: center;
+  font-size: 45px;
+  margin: 60px 0;
+}
+
+.section-2 .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.section-2 .wrapper .content h1 {
+  font-size: 40px;
+}
+
+.section-2 .wrapper .content p {
+  font-family: 'Roboto', sans-serif;
+  color: #535558;
+  line-height: 1.9;
+  margin: 30px 0;
+}
+
+.section-2 .btn {
+  border: none;
+  background-color: #8bb7a2;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: 'Raleway';
+  padding: 15px 50px;
+  cursor: pointer;
+}
+
+.section-2 .wrapper .image-3 img {
+  width: 450px;
 }
