converted px to rem

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,33 +4,38 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Raleway', 'Roboto', sans-serif;
 }
 
+html,
 body {
+  font-family: 'Raleway', 'Roboto', sans-serif;
   background-color: #fbfbfb;
+  font-size: 62.5%;
 }
 
 /* Navbar */
 header {
   background-color: #636c79;
-  height: 90vh;
+  min-height: 90vh;
 }
 
 .logo {
-  width: 120px;
+  width: 60%;
   cursor: pointer;
 }
 
 header nav {
-  padding: 20px 60px;
+  padding: 2rem 6rem;
 }
 
 header nav,
-.lists {
+.lists,
+.container,
+.section-1 .rates {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 4rem;
 }
 
 .lists {
@@ -40,42 +45,41 @@ header nav,
 
 .lists .list-item {
   list-style-type: none;
-  margin: 10px 20px;
   color: #fff;
   cursor: pointer;
+  font-size: 1.6rem;
 }
 
 nav .btn {
   color: #fff;
   background-color: transparent;
-  padding: 10px 40px;
-  margin-left: 80px;
+  padding: 1rem 4rem;
+  margin-left: 8rem;
   cursor: pointer;
-  border: 2px solid #7d8188;
-  border-radius: 2px;
+  border: 0.2rem solid #7d8188;
+  border-radius: 0.2rem;
 }
 
 /* Header main */
 .container {
-  display: flex;
-  align-items: center;
   justify-content: space-evenly;
 }
 
 .container .image {
-  margin-top: 40px;
+  margin-top: 4rem;
 }
 
 .container .heading h1 {
   color: #fff;
-  font-size: 60px;
+  font-size: 6rem;
 }
 
 .container .heading p {
   color: #c3c5c7;
   font-weight: 400;
   line-height: 1.6;
-  padding: 25px 0;
+  padding: 2.5rem 0;
+  font-size: 1.6rem;
 }
 
 .container form {
@@ -83,14 +87,18 @@ nav .btn {
   position: relative;
 }
 
+.container form i {
+  font-size: 1.5rem;
+}
+
 .container form input {
   width: 100%;
   border: 0;
   outline: 0;
   font-size: medium;
-  margin: 12px 0;
-  padding: 20px 30px;
-  padding-left: 50px;
+  margin: 1.2rem 0;
+  padding: 2rem 3rem;
+  padding-left: 5rem;
 }
 
 .container form input::placeholder {
@@ -104,33 +112,31 @@ nav .btn {
   color: #ffffff;
   font-weight: 600;
   font-family: 'Raleway';
-  padding: 15px 50px;
+  padding: 1.5rem 5rem;
   cursor: pointer;
   position: absolute;
-  top: 19px;
-  right: 8px;
+  top: 1.9rem;
+  right: 0.8rem;
 }
 
 .container form i {
   position: absolute;
-  top: 35px;
-  left: 15px;
+  top: 3.5rem;
+  left: 1.5rem;
 }
 
 /* Sections */
 .section-1 {
-  margin: 100px 30px;
+  margin: 10rem 3rem;
 }
 
 .section-1 > h1 {
   text-align: center;
-  font-size: 45px;
-  margin-bottom: 60px;
+  font-size: 4.5rem;
+  margin-bottom: 6rem;
 }
 
 .section-1 .rates {
-  display: flex;
-  align-items: center;
   justify-content: space-evenly;
 }
 
@@ -139,28 +145,32 @@ nav .btn {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 15px;
+  row-gap: 1.5rem;
 }
 
 .section-1 .rates .rate > h1 {
   font-family: 'Roboto', sans-serif;
-  font-size: 35px;
+  font-size: 3.5rem;
+}
+
+.section-1 .rates .rate p {
+  font-size: 1.6rem;
 }
 
 .section-1 .image-2 img {
   width: 90%;
   display: block;
-  margin: 50px auto;
+  margin: 5rem auto;
 }
 
 .section-2 {
-  margin: 120px 0;
+  margin: 12rem 0;
 }
 
 .section-2 > h1 {
   text-align: center;
-  font-size: 45px;
-  margin: 60px 0;
+  font-size: 4.5rem;
+  margin: 6rem 0;
 }
 
 .section-2 .wrapper {
@@ -170,14 +180,15 @@ nav .btn {
 }
 
 .section-2 .wrapper .content h1 {
-  font-size: 40px;
+  font-size: 4rem;
 }
 
 .section-2 .wrapper .content p {
   font-family: 'Roboto', sans-serif;
   color: #535558;
   line-height: 1.9;
-  margin: 30px 0;
+  margin: 3rem 0;
+  font-size: 1.6rem;
 }
 
 .section-2 .btn,
@@ -185,50 +196,53 @@ nav .btn {
   border: none;
   background-color: #8bb7a2;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 600;
   font-family: 'Raleway';
-  padding: 15px 50px;
+  padding: 1.5rem 5rem;
   cursor: pointer;
 }
 
 .section-2 .wrapper .image-3 img {
-  width: 450px;
+  width: 45rem;
 }
 
 .section-3 {
-  margin: 100px 140px;
+  margin: 10rem 14rem;
 }
 
 .section-3 .team-description {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 45px 0;
+  margin: 4.5rem 0;
 }
 
 .section-3 .team-description h1 {
-  font-size: 40px;
+  font-size: 4rem;
 }
 
 .section-3 .team-description p {
   font-family: 'Roboto', sans-serif;
   color: #535558;
   line-height: 1.9;
+  font-size: 1.6rem;
 }
 
 .section-3 .teams {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 3rem;
 }
 
 .section-3 .member-1,
 .section-3 .member-2,
 .section-3 .member-3 {
-  width: 350px;
-  height: 450px;
+  width: 35rem;
+  height: 45rem;
 }
 
 .section-3 .teams .team-member {
@@ -236,18 +250,22 @@ nav .btn {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  row-gap: 10px;
+  row-gap: 1rem;
 }
 
 .section-3 .teams .team-member p {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
 
+.section-3 .teams .team-member h4 {
+  font-size: 1.6rem;
+}
+
 .section-3 .center {
   text-align: center;
-  margin: 45px 0;
+  margin: 4.5rem 0;
 }
 
 /* Footer */
@@ -259,25 +277,26 @@ footer .top {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 30px 140px;
-  padding: 55px 0;
-  border-bottom: 2px solid #282f34;
+  margin: 3rem 14rem;
+  padding: 5.5rem 0;
+  border-bottom: 0.2rem solid #282f34;
 }
 
 footer .top .media-icons a i {
-  margin-left: 15px;
+  margin-left: 1.5rem;
   background-color: #282f34;
-  padding: 15px;
+  padding: 1.5rem;
   border-radius: 50%;
   color: #fff;
+  font-size: 1.6rem;
 }
 
 footer .link-boxes {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 40px 140px;
-  padding-bottom: 120px;
+  padding: 4rem 14rem;
+  padding-bottom: 12rem;
 }
 
 footer .link-boxes .box li {
@@ -286,14 +305,14 @@ footer .link-boxes .box li {
 }
 
 footer .link-boxes .box .link_name {
-  padding: 14px 0;
+  padding: 1.4rem 0;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 footer .link-boxes .box li a {
   text-decoration: none;
   color: #b1b4b6;
-  font-size: 13px;
+  font-size: 1.3rem;
   line-height: 2.5;
 }
